# rubberband_pitch_shift_plugin

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  RubberBandPitchShifter.h
rubberband/: CMakeLists.txt  README.md
rubberband/dotnet/: rubberband-dll.vcxproj  rubberband-dll.vcxproj.filters  rubberband-library.vcxproj  rubberband.sln
rubberband/dotnet/rubberband-dll/: dllmain.cpp  rubberband-dll.cpp  stdafx.h
rubberband/dotnet/rubberband-sharp/: Install.ps1  RubberBandNativeMethods.cs  RubberBandNativeMethodsWin32.cs  RubberBandNativeMethodsx64.cs  RubberBandStretcher.cs  rubberband-sharp.csproj  rubberband-sharp.nuspec  rubberband-sharp.targets
rubberband/main/: main.cpp
rubberband/otherbuilds/deploy/: win.bat
rubberband/single/: CMakeLists.txt  RubberBandSingle.cpp
